// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateElementKeys Tests should create unique element key for Reminder Element types 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "key": "challenge-authenticator_0987654321abc",
        "options": {
          "content": "See errors below",
        },
        "type": "Reminder",
      },
      {
        "key": "challenge-authenticator_Title",
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "key": "challenge-authenticator_Field",
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Field",
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Button",
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "key": "challenge-authenticator_Link",
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`updateElementKeys Tests should create unique element key when key value is not set and transaction contains authID 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "key": "challenge-authenticator_Title_abc1234",
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "key": "challenge-authenticator_Field_abc1234",
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Field_abc1234",
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Button_abc1234",
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "key": "challenge-authenticator_Link_abc1234",
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`updateElementKeys Tests should create unique element key when key value is not set and transaction contains authKey & authID 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "key": "challenge-authenticator_Title_okta_email_abc1234",
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "key": "challenge-authenticator_Field_okta_email_abc1234",
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Field_okta_email_abc1234",
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Button_okta_email_abc1234",
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "key": "challenge-authenticator_Link_okta_email_abc1234",
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`updateElementKeys Tests should create unique element key when key value is not set and transaction contains authKey 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "key": "challenge-authenticator_Title_okta_email",
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "key": "challenge-authenticator_Field_okta_email",
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Field_okta_email",
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Button_okta_email",
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "key": "challenge-authenticator_Link_okta_email",
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`updateElementKeys Tests should create unique element key when key value is not set and transaction does not contain authKey/authID 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "key": "challenge-authenticator_Title",
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "key": "challenge-authenticator_Field",
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Field",
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Button",
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "key": "challenge-authenticator_Link",
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`updateElementKeys Tests should create unique element key when key value is preset and transaction contains authID 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "key": "challenge-authenticator_Title_element_key0_abc1234",
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "key": "challenge-authenticator_Field_element_key1_abc1234",
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Field_element_key2_abc1234",
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Button_element_key3_abc1234",
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "key": "challenge-authenticator_Link_element_key4_abc1234",
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`updateElementKeys Tests should create unique element key when key value is preset and transaction contains authKey & authID 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "key": "challenge-authenticator_Title_element_key0_okta_email_abc1234",
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "key": "challenge-authenticator_Field_element_key1_okta_email_abc1234",
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Field_element_key2_okta_email_abc1234",
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Button_element_key3_okta_email_abc1234",
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "key": "challenge-authenticator_Link_element_key4_okta_email_abc1234",
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`updateElementKeys Tests should create unique element key when key value is preset and transaction contains authKey 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "key": "challenge-authenticator_Title_element_key0_okta_email",
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "key": "challenge-authenticator_Field_element_key1_okta_email",
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Field_element_key2_okta_email",
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Button_element_key3_okta_email",
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "key": "challenge-authenticator_Link_element_key4_okta_email",
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`updateElementKeys Tests should create unique element key when key value is preset and transaction does not contain authKey/authID 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "key": "challenge-authenticator_Title_element_key0",
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "key": "challenge-authenticator_Field_element_key1",
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Field_element_key2",
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "key": "challenge-authenticator_Button_element_key3",
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "key": "challenge-authenticator_Link_element_key4",
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
